# suanpan

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/suanpan/: __init__.py  abqfil.py  ftnfil.py
src/suanpan/cli/: __init__.py  fil2h5.py  filinfo.py
