# SPDX-FileCopyrightText: 2025 Stefano Miccoli <stefano.miccoli@polimi.it>
#
# SPDX-License-Identifier: MIT

[project]
name = "suanpan-abaqus"
dynamic = ["version"]
description = "Python interface to Abaqus .fil files"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
readme = "README.md"
authors = [
    { name = "Stefano Miccoli", email = "stefano.miccoli@polimi.it" }
]
requires-python = ">=3.10"
dependencies = ["numpy>=2.0.0"]
license = "MIT"
license-files = ["LICENSES/MIT.txt"]

[project.scripts]
filinfo = "suanpan.cli.filinfo:main"

[project.optional-dependencies]
filinfo = [ "PyYAML >= 6.0.3" ]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.13.5",
    "mypy>=2.0.0",
    "types-pyyaml>=6.0.12.20260508",
]

#
# uv
#
[tool.uv]
resolution = "lowest-direct"

#
# hatch
#
[tool.hatch.version]
source = "vcs"
[tool.hatch.version.raw-options]
version_scheme = "release-branch-semver"
local_scheme = "node-and-date"
[tool.hatch.build.hooks.vcs]
version-file = "src/suanpan/_version.py"
[tool.hatch.build.targets.wheel]
packages = ["src/suanpan"]

#
# ruff
#
[tool.ruff]
line-length = 80
target-version = "py310"

[tool.ruff.lint]
select = ["A", "E", "EM", "F", "I", "NPY", "RUF", "S", "SIM", "TRY", "T10", "UP"]
ignore = ["S101"]
